--- a/index.html
+++ b/index.html
@@ -22,5 +22,10 @@
   <body>
     <div id="root"></div>
     <script type="module" src="/src/main.jsx"></script>
+    <script>
+      document.querySelector('#about').addEventListener('click', function(){
+        gtag('event', 'click_about');
+      })
+    </script>
   </body>
 </html>
